// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Combobox /> Generated Snapshots AdjustedWidth story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r6l:"
      id="headlessui-label-:r6k:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r6q:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r6n:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r6k:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r6l:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r6n:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r6k: headlessui-combobox-button-:r6m:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r6m:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots Default story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r3:"
      id="headlessui-label-:r2:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r8:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r5:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r2:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r3:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r5:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r2: headlessui-combobox-button-:r4:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r4:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots Error story renders snapshot 1`] = `
<div
  class="combobox combobox--has-fieldNote combobox--label-layout-vertical w-[384px]"
  data-headlessui-state="open invalid"
  data-invalid=""
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r85:"
      id="headlessui-label-:r84:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm combobox__required-text"
    >
      (Required)
    </span>
    <div
      class="combobox__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="combobox-input combobox-input--error"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r8a:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r87:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r84:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open invalid focus"
      data-invalid=""
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r85:"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r87:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r84: headlessui-combobox-button-:r86:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active invalid"
      data-invalid=""
      data-open=""
      id="headlessui-combobox-button-:r86:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots HorizontalLabel story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-horizontal w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r13:"
      id="headlessui-label-:r12:"
    >
      <span
        class="text text--label-md"
      >
        Animal?
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r18:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r15:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r12:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r13:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r15:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r12: headlessui-combobox-button-:r14:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r14:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots Immediate story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:rj:"
      id="headlessui-label-:ri:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:ro:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:rl:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:ri:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:rj:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:rl:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:ri: headlessui-combobox-button-:rk:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:rk:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots MultipleWithChipIcons story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-[320px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r4j:"
      id="headlessui-label-:r4i:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="combobox-input combobox-input--has-chips"
  >
    <ul
      class="combobox-input__chips"
    >
      <li>
        <div
          class="input-chip"
        >
          <div
            class="input-chip__label"
          >
            <svg
              aria-hidden="true"
              class="icon input-chip__leading-component"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
              />
            </svg>
            <span
              class="text text--body-xs"
            >
              Dogs
            </span>
          </div>
          <button
            class="input-chip__action-button"
          >
            <svg
              class="icon"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Dogs
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="input-chip"
        >
          <div
            class="input-chip__label"
          >
            <svg
              aria-hidden="true"
              class="icon input-chip__leading-component"
              fill="currentColor"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
              />
            </svg>
            <span
              class="text text--body-xs"
            >
              Cats
            </span>
          </div>
          <button
            class="input-chip__action-button"
          >
            <svg
              class="icon"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Cats
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-:r4o:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r4l:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r4i:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r4j:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:r4l:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r4i: headlessui-combobox-button-:r4k:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r4k:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots MultipleWithManySelected story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-[240px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r43:"
      id="headlessui-label-:r42:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="combobox-input combobox-input--has-chips"
  >
    <ul
      class="combobox-input__chips"
    >
      <li>
        <div
          class="input-chip"
        >
          <div
            class="input-chip__label"
          >
            <span
              class="text text--body-xs"
            >
              Dogs
            </span>
          </div>
          <button
            class="input-chip__action-button"
          >
            <svg
              class="icon"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Dogs
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="input-chip"
        >
          <div
            class="input-chip__label"
          >
            <span
              class="text text--body-xs"
            >
              Cats
            </span>
          </div>
          <button
            class="input-chip__action-button"
          >
            <svg
              class="icon"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Cats
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="input-chip"
        >
          <div
            class="input-chip__label"
          >
            <span
              class="text text--body-xs"
            >
              Birds
            </span>
          </div>
          <button
            class="input-chip__action-button"
          >
            <svg
              class="icon"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Birds
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="input-chip"
        >
          <div
            class="input-chip__label"
          >
            <span
              class="text text--body-xs"
            >
              Rabbits
            </span>
          </div>
          <button
            class="input-chip__action-button"
          >
            <svg
              class="icon"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                remove Rabbits
              </title>
              <path
                d="M6.39994 18.6542L5.34619 17.6004L10.9462 12.0004L5.34619 6.40043L6.39994 5.34668L11.9999 10.9467L17.5999 5.34668L18.6537 6.40043L13.0537 12.0004L18.6537 17.6004L17.5999 18.6542L11.9999 13.0542L6.39994 18.6542Z"
              />
            </svg>
          </button>
        </div>
      </li>
    </ul>
    <input
      aria-activedescendant="headlessui-combobox-option-:r48:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r45:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r42:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r43:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:r45:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r42: headlessui-combobox-button-:r44:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r44:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots MultipleWithoutChips story renders snapshot 1`] = `
<div
  class="combobox combobox--has-fieldNote combobox--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r53:"
      id="headlessui-label-:r52:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal(s)
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r58:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r55:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r52:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r53:"
      placeholder="1 selected"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:r55:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r52: headlessui-combobox-button-:r54:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r54:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots NoVisibleLabel story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r99:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r96:"
      aria-expanded="true"
      aria-label="hidden label"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r94:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r96:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r95:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots NoVisibleLabelButRequired story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline combobox__overline--no-label"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r9k:"
      id="headlessui-label-:r9j:"
    >
      <span
        class="text text--label-md"
      />
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r9p:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r9m:"
      aria-expanded="true"
      aria-label="hidden label"
      aria-labelledby="headlessui-label-:r9j:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r9k:"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r9m:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r9j: headlessui-combobox-button-:r9l:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r9l:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots Optional story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r7l:"
      id="headlessui-label-:r7k:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm combobox__required-text"
    >
      (Optional)
    </span>
    <div
      class="combobox__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r7q:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r7n:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r7k:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r7l:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r7n:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r7k: headlessui-combobox-button-:r7m:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r7m:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots Required story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r75:"
      id="headlessui-label-:r74:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm combobox__required-text"
    >
      (Required)
    </span>
    <div
      class="combobox__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r7a:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r77:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r74:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r75:"
      required=""
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r77:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r74: headlessui-combobox-button-:r76:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r76:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots Warning story renders snapshot 1`] = `
<div
  class="combobox combobox--has-fieldNote combobox--label-layout-vertical w-[384px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r8l:"
      id="headlessui-label-:r8k:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <span
      class="text text--body-sm combobox__required-text"
    >
      (Optional)
    </span>
    <div
      class="combobox__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Some descriptive text
      </span>
    </div>
  </div>
  <div
    class="combobox-input combobox-input--warning"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r8q:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r8n:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r8k:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r8l:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r8n:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r8k: headlessui-combobox-button-:r8m:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r8m:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots WithFieldName story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r2j:"
      id="headlessui-label-:r2i:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
    <div
      class="combobox__subLabel"
    >
      <span
        class="text text--body-sm"
      >
        Additional descriptive text
      </span>
    </div>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r2o:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r2l:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r2i:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r2j:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r2l:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r2i: headlessui-combobox-button-:r2k:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r2k:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots WithFieldNote story renders snapshot 1`] = `
<div
  class="combobox combobox--has-fieldNote combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r33:"
      id="headlessui-label-:r32:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r38:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r35:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r32:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r33:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r35:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r32: headlessui-combobox-button-:r34:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r34:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots WithPlaceholder story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r3j:"
      id="headlessui-label-:r3i:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r3o:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r3l:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r3i:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r3j:"
      placeholder="Search animals"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:r3l:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r3i: headlessui-combobox-button-:r3k:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r3k:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots WithRenderProp story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r5j:"
      id="headlessui-label-:r5i:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r5o:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r5l:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r5i:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      id="headlessui-combobox-input-:r5j:"
      role="combobox"
      style="--combobox__input-width: calc(4 * 1ch);"
      type="text"
      value="Dogs"
    />
    <button
      aria-controls="headlessui-combobox-options-:r5l:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r5i: headlessui-combobox-button-:r5k:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r5k:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
  <p
    class="mt-spacing-size-1"
  >
    Picking
    : 
    Dogs
  </p>
</div>
`;

exports[`<Combobox /> Generated Snapshots WithSelectedBy story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r23:"
      id="headlessui-label-:r22:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r2a:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r25:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r22:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r23:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Cats"
    />
    <button
      aria-controls="headlessui-combobox-options-:r25:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r22: headlessui-combobox-button-:r24:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r24:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots WithSelectedOption story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-60"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r1j:"
      id="headlessui-label-:r1i:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r1q:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r1l:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r1i:"
      class="combobox-input__field"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r1j:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="Cats"
    />
    <button
      aria-controls="headlessui-combobox-options-:r1l:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r1i: headlessui-combobox-button-:r1k:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r1k:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`<Combobox /> Generated Snapshots WithTruncation story renders snapshot 1`] = `
<div
  class="combobox combobox--label-layout-vertical w-[160px]"
  data-headlessui-state="open"
  data-open=""
  data-testid="combobox"
>
  <div
    class="combobox__overline"
  >
    <label
      class="label label--md combobox__label"
      data-headlessui-state="open"
      data-open=""
      for="headlessui-combobox-input-:r63:"
      id="headlessui-label-:r62:"
    >
      <span
        class="text text--label-md"
      >
        Favorite Animal
      </span>
    </label>
  </div>
  <div
    class="combobox-input"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r68:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r65:"
      aria-expanded="true"
      aria-labelledby="headlessui-label-:r62:"
      class="combobox-input__field combobox-input__field--truncated"
      data-focus=""
      data-headlessui-state="open focus"
      data-open=""
      data-testid="input-button"
      id="headlessui-combobox-input-:r63:"
      role="combobox"
      style="--combobox__input-width: calc(0 * 1ch);"
      type="text"
      value="A very long option label that will not fit"
    />
    <button
      aria-controls="headlessui-combobox-options-:r65:"
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-label="Show options"
      aria-labelledby="headlessui-label-:r62: headlessui-combobox-button-:r64:"
      class="combobox-input__button"
      data-active=""
      data-headlessui-state="open active"
      data-open=""
      id="headlessui-combobox-button-:r64:"
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="icon combobox-input__icon combobox-input__icon--reversed"
        fill="currentColor"
        height="24px"
        style="--icon-size: 24px;"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.9999 15.0542L6.34619 9.40043L7.39994 8.34668L11.9999 12.9467L16.5999 8.34668L17.6537 9.40043L11.9999 15.0542Z"
        />
      </svg>
    </button>
  </div>
</div>
`;
